Bug 238338 - Sometimes digikam reads a wrong ICC profile from images
Summary: Sometimes digikam reads a wrong ICC profile from images
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ColorManagement-Profiles (other bugs)
Version First Reported In: 1.2.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-20 21:33 UTC by Olaf Märker
Modified: 2022-02-01 11:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olaf Märker 2010-05-20 21:33:01 UTC
Version:           1.2.0 (using KDE 4.3.5)
OS:                Linux
Installed from:    Gentoo Packages

All my images have an icc profile of Adobe RGB embedded. When I select an image in digikam, the correct profile is shown in the ICC-Profile window. But when I select the next picture, the ICC-Profile sRGB is shown and when I try to edit this picture, i will be asked to transfer the image in to my workspace profile. It seems, that every time an image is loaded from cache, the sRGB profile is shown (thats the profile for my screen), but when I select some other pictures and than return to this picture, (I think it is now not loaded from cache, because it will take some seconds to display it) the correct profile Adobe RGB is shown.
Comment 1 Marcel Wiesweg 2010-05-21 14:24:54 UTC
SVN commit 1129154 by mwiesweg:

Previews are stored post-processed in the cache, full versions are not.
That means for non-RAW images, we must distinguish by the cache key
between the two even for full-size previews.
In case of preview loading, the unprocessed full version can additionally
be stored in the cache.

BUG: 238338

 M  +2 -1      NEWS  
 M  +4 -0      libs/threadimageio/loadingdescription.cpp  
 M  +9 -0      libs/threadimageio/previewtask.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129154