Previews are stored post-processed in the cache, full versions are not. That means for non-RAW images, we must distinguish by the cache key between the two even for full-size previews. In case of preview loading, the unprocessed full version can additionally be stored in the cache.

BUG: 238338

svn path=/trunk/extragear/graphics/digikam/; revision=1129154